Corrected Subtitle in 62 and a quotemark & linewrap in 74.

--- a/062.md
+++ b/062.md
@@ -1,4 +1,5 @@
-# Chapter 62 ## The Stanford Prison Experiment, Final
+# Chapter 62
+## The Stanford Prison Experiment, Final
 
 Minerva gazed up at the clock, the golden hands and silver numerals, the jerking motion. Muggles had invented that, and until they had, wizards had not bothered keeping time. Bells, timed by a sanded hourglass, had served Hogwarts for its classes when it was built. It was one of the things that blood purists wished not to be true, and therefore Minerva knew it.
 
