--- a/074.md
+++ b/074.md
@@ -258,7 +258,7 @@ A nameless chill went down Hermione’s spine then, a frisson of fear and disori
 
 “What’s she—” began a buzzing female voice.
 
-Tracey’s face looked pale, twisted with fear, but her lips moved, spilled forth sound in a high chant, *“Mabra, brahoring, mabra…*”
+Tracey’s face looked pale, twisted with fear, but her lips moved, spilled forth sound in a high chant, *“Mabra, brahoring, mabra…”*
 
 A chill wind seemed to spring up within the confines of the corridor, a dark breath that caressed their faces and touched their hands with ice.
 
@@ -270,7 +270,8 @@ Hermione saw it, she saw it but she still couldn’t imagine it; she couldn’t 
 
 And Tracey’s voice went on chanting, her voice sounding louder and more confident, and her face screwed up like she was trying to remember something *very exactly*.
 
-*“Shuffle, duffle, muzzle, muff.   *Fista, wista, mista-cuff.”*
+*“Shuffle, duffle, muzzle, muff.*  
+*Fista, wista, mista-cuff.”*
 
 Now all those present could feel it, heroines and bullies alike, the sensation of some dark will pressing down on them, a tingling in the air as something built and built and built. All the blue hazes around the white robes, all the shielding spells, had died out without any visible hex touching them. There were more flashes of light as more desperate spells were fired, but they fizzled out in midair like candle-flames touching water.
 
