Added roman numerals for 30 – 35
Also corrected more American spellings.

--- a/030.md
+++ b/030.md
@@ -1,7 +1,7 @@
 ###### J. K. Rowling if a man tries to bother you, you can think blue, count two, and look for a red shoe.
 
 # Chapter 30
-## Working in Groups, Pt 1
+## Working in Groups, Part Ⅰ
 
 * * * * *
 
