--- a/034.md
+++ b/034.md
@@ -1,5 +1,5 @@
 # Chapter 34
-## Coordination Problems, Pt 2
+## Coordination Problems, Part Ⅱ
 
 Minerva and Dumbledore together had applied their combined talent to conjure the grand stage toward which Quirrell now slowly trudged; it was, at its core, sturdy wood, but the outer surfaces shone with glitter of marble inlaid with platinum and studded with gems of every House colour. Neither she nor the Headmaster was any Founder of Hogwarts, but the conjuration only needed to last a few hours. Minerva ordinarily enjoyed the few occasions when she had the occasion to tire herself out on large Transfigurations; she should have enjoyed the many small chances for artistry, and the illusion of opulence; but this time she had done the work with the dreadful feeling of digging her own grave.
 
@@ -33,7 +33,7 @@ A slight titter of laughter ran through the crowd, with a sharp undertone.
 
 “I suppose you are all wondering what I will do?” said Professor Quirrell. “There is nothing for it; I shall have to do what is fair. Although first there was a little speech I wanted to make, and before even that, it appears to me that Mr. Malfoy and Miss Granger have something they wish to share.”
 
-Draco blinked, and then he and Granger traded rapid glances—*may I?*—*yes, go ahead—* and Draco raised his voice.
+Draco blinked, and then he and Granger traded rapid glances—*may I?*—*yes, go ahead*—and Draco raised his voice.
 
 “General Granger and I would both like to say,” Draco said in his most formal voice, knowing it was being amplified and heard, “that we will no longer accept the help of any traitors. And if, in any battle, we find that Potter has accepted traitors from either of our armies, we will join forces to crush him.”
 
@@ -239,7 +239,7 @@ And for one brief moment, so fast that Draco thought he might have imagined it, 
 
 There was a confused silence.
 
-“You can’t do that,” Harry said flatly from beside Draco. “Not even *I* can do that. Two of those wishes are mutually incompatible. It’s *logically impossible—*” and then Harry cut himself off.
+“You can’t do that,” Harry said flatly from beside Draco. “Not even *I* can do that. Two of those wishes are mutually incompatible. It’s *logically impossible—”* and then Harry cut himself off.
 
 “You’re a few years too young to tell me what I can’t do, Mr. Potter,” said Professor Quirrell, with a brief dry smile.
 
