--- a/035.md
+++ b/035.md
@@ -1,5 +1,5 @@
 # Chapter 35
-## Coordination Problems, Pt 3
+## Coordination Problems, Part Ⅲ
 
 They had gone to the Defence Professor’s office, and Professor Quirrell had sealed the door before he leaned back in his chair and spoke.
 
@@ -123,9 +123,9 @@ If it came down to a final war…
 
 Professor Quirrell had forgotten to ask Harry which side he would protect.
 
-A scientific civilization, reaching outward, looking upward, knowing that its destiny was to grasp the stars.
+A scientific civilisation, reaching outward, looking upward, knowing that its destiny was to grasp the stars.
 
-And a magical civilization, slowly fading as knowledge was lost, still governed by a nobility that saw Muggles as not quite human.
+And a magical civilisation, slowly fading as knowledge was lost, still governed by a nobility that saw Muggles as not quite human.
 
 It was a terribly sad feeling, but not one that held any hint of doubt.
 
@@ -245,7 +245,7 @@ Professor McGonagall pressed her hands over her eyes. When she took them away, h
 
 Neither of them really wanted to do anything complicated that Saturday, not after fighting a battle earlier. So Draco was just sitting in an unused classroom and trying to read a book called *Thinking Physics.* It was one of the most fascinating things that Draco had ever read in his life, at least the parts he could understand, at least when the *accursed idiot* who refused to let his books out of his sight could manage to *shut up* and let Draco *concentrate*—
 
-“Hermione Granger is a *muuudbloood,*” sang Harry Potter from where he sat at a nearby desk, reading a far more advanced book of his own.
+“Hermione Granger is a *muuudbloood,”* sang Harry Potter from where he sat at a nearby desk, reading a far more advanced book of his own.
 
 “I know what you’re trying to do,” said Draco calmly without looking up from the pages. “It’s not going to work. We’re still ganging up and crushing you.”
 
@@ -267,7 +267,7 @@ Harry didn’t say anything, so Draco looked up from his book, and felt a twinge
 
 Draco put a serious look on his own face. “You can talk about it with *me*. It’s probably not important compared to the other secrets you’ve told me, and what else are friends for?” *That’s right, I’m your friend! Feel guilty!*
 
-“It wasn’t really all that interesting,” Harry said with obviously artificial lightness. “Just, *I wish Professor Quirrell would teach Battle Magic again next year.*”
+“It wasn’t really all that interesting,” Harry said with obviously artificial lightness. “Just, *I wish Professor Quirrell would teach Battle Magic again next year.”*
 
 Harry sighed, and looked back down at his book.
 
