Added roman numerals for all “parts”, corrected Chap. 42 header

--- a/039.md
+++ b/039.md
@@ -1,5 +1,5 @@
 # Chapter 39
-## Pretending to be Wise, Pt 1
+## Pretending to be Wise, Part Ⅰ
 
 Whistle. Tick. Bzzzt. Ding. Glorp. Pop. Splat. Chime. Toot. Puff. Tinkle. Bubble. Beep. Thud. Crackle. Whoosh. Hiss. Pffft. Whirr.
 
