--- a/044.md
+++ b/044.md
@@ -1,5 +1,5 @@
 # Chapter 44
-## Humanism, Part 2
+## Humanism, Part Ⅱ
 
 “Fawkes,” said Albus Dumbledore, his voice cracking, “help him, please—”
 
