--- a/040.md
+++ b/040.md
@@ -1,5 +1,5 @@
 # Chapter 40
-## Pretending to be Wise, Pt 2
+## Pretending to be Wise, Part Ⅱ
 
 Harry, holding the tea cup in the exactly correct way that Professor Quirrell had needed to demonstrate three times, took a small, careful sip. All the way across the long, wide table that was the centrepiece of Mary’s Room, Professor Quirrell took a sip from his own cup, making it look far more natural and elegant. The tea itself was something whose name Harry couldn’t even pronounce, or at least, every time Harry had tried to repeat the Chinese words, Professor Quirrell had corrected him, until finally Harry had given up.
 
