--- a/046.md
+++ b/046.md
@@ -1,5 +1,5 @@
 # Chapter 46
-## 45: Humanism, Pt 4
+## 45: Humanism, Part Ⅳ
 
 The last tip of the Sun was sinking below the horizon, the red light fading from the treetops, only the blue sky illuminating the six people standing upon the winter-dried and snow-spotted grass, near a vacant cage on whose floor lay an empty, tattered cloak.
 
